--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
-/* Changed div tag to section tag to reflect changes made in the html file*/
+/* Changed div tag to section tag to reflect changes made in index.html*/
 .header section {  
     padding-top: 15px;
     margin-right: 20px;
@@ -31,14 +31,11 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
-.header section ul {
-    list-style-type: none;
-}
-
+/*Grouped the class selectors together */
 .header section ul li {
     display: inline-block;
     margin-left: 25px;
+    list-style-type: none;
 }
 
 a {
@@ -51,10 +48,10 @@ p {
 }
 
 .hero {
+    /*moved the background image url to index.html and added alt attribute to it*/
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
