--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,6 @@
     margin: 0;
 }
 
-body {
-    background-color: #d9dcd6;
-}
-
 .header  {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -20,13 +16,8 @@ body {
     color: #d9dcd6;
 }
 
-h1 {
-    display: inline-block;
-    font-size: 48px;
-}
-
 .list {  
-    /* Changed div tag to section tag to reflect changes made in index.html and grouped the .header section */
+    /* added a class selector*/
     padding-top:15px;
     margin-right:20px;
     float:right;
@@ -37,20 +28,11 @@ h1 {
     /*removed list-stylte-type*/
 }
 
-/*Grouped the class selectors together */
 .header section ul li {
+     /*Grouped the class selectors together */
     display: inline-block;
     margin-left: 25px;
     list-style-type: none;
-}
-
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
 }
 
 .hero {
@@ -89,16 +71,12 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost {
+.benefit-lead,
+.benefit-brand,
+.benefit-cost {
         /* Grouped class selectors together*/
     margin-bottom: 32px;
     color: #ffffff;
-}
-
-h3 {
-    /*removed class selector and used element selector*/
-    margin-bottom: 10px;
-    text-align: center;
 }
 
 .benefit-lead img, .benefit-brand img, .benefit-cost img {
@@ -108,7 +86,9 @@ h3 {
     max-width: 150px;
 }
 
-.search-engine-optimization, .online-reputation-management, .social-media-marketing{
+.search-engine-optimization, 
+.online-reputation-management,
+.social-media-marketing {
         /* Grouped class selectors together*/
     margin-bottom: 20px;
     padding: 50px;
@@ -118,12 +98,16 @@ h3 {
     color: #ffffff;
 }
 
-.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
+.search-engine-optimization img, 
+.online-reputation-management img, 
+.social-media-marketing img { 
     /* Grouped img class selectors together*/
     max-height: 200px;
 }
 
-.search-engine-optimization h2 ,.online-reputation-management h2, .social-media-marketing h2{
+.search-engine-optimization h2 ,
+.online-reputation-management h2, 
+.social-media-marketing h2{
         /* Grouped h2 class selectors together*/
     margin-bottom: 20px;
     font-size: 36px;
@@ -139,4 +123,28 @@ h3 {
 .footer h4 {
     /* changed h2 to h4 to reflect changes made in index.html*/
     font-size: 20px;
+}
+
+body {
+    background-color: #d9dcd6;
+}
+
+h1 {
+    display: inline-block;
+    font-size: 48px;
+}
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
+h3 {
+    /*removed class selector and used element selector*/
+    margin-bottom: 10px;
+    text-align: center;
 }
