regrouped selectors in css and renamed class selector in html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
 
-/*The class selectors are at the top of the page, followed by the element selectors*/ 
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+}
+
+body {
+    background-color: #d9dcd6;
 }
 
 .header  {
@@ -18,32 +21,67 @@
     color: #d9dcd6;
 }
 
-.list {  
-    /* added a class selector ('list' in the html)*/
+.headernavigationbar {  
+    /* added a class selector ('headernavigationbar' in the html)*/
     padding-top:15px;
     margin-right:20px;
     float:right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-    display: inline-block;
+    /* display: inline-block; */
     margin-left: 25px;
     /*removed list-stylte-type*/
 }
 
-.header section ul li {
-     /*Grouped the class selectors together */
+h1 {
+    display: inline-block;
+    font-size: 48px;
+}
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+li {
+     /*targeted the ordered list using the elements selector*/
     display: inline-block;
     margin-left: 25px;
     list-style-type: none;
 }
 
-.hero {
-    /*moved the background image url to index.html and added alt attribute to it*/
+.mainimage {
+    /*moved the background image url to index.html and added alt attribute to it. Changes the class name*/
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
     background-size: cover;
     background-position: center;
+}
+
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.content-main {
+    /* renamed and grouped the class selector */
+margin-bottom: 20px;
+padding: 50px;
+height: 300px;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+background-color: #0072bb;
+color: #ffffff;
+}
+
+.content-main img { 
+max-height: 200px;
+}
+
+.content-main h2 {
+margin-bottom: 20px;
+font-size: 36px;
 }
 
 .float-left {
@@ -56,10 +94,9 @@
     margin-left: 25px;
 }
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
+
+p {
+    font-size: 16px;
 }
 
 .benefits {
@@ -73,48 +110,22 @@
     background-color: #2589bd;
 }
 
-.benefit-lead,
-.benefit-brand,
-.benefit-cost {
-        /* Grouped class selectors together*/
+.benefits-content{
+        /* renamed and grouped the class selector */
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead img,
-.benefit-brand img, 
-.benefit-cost img {
-        /* Grouped img class selectors together*/
+.benefits-content img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.search-engine-optimization, 
-.online-reputation-management,
-.social-media-marketing {
-        /* Grouped class selectors together*/
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img, 
-.online-reputation-management img, 
-.social-media-marketing img { 
-    /* Grouped img class selectors together*/
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 ,
-.online-reputation-management h2, 
-.social-media-marketing h2{
-        /* Grouped h2 class selectors together*/
-    margin-bottom: 20px;
-    font-size: 36px;
+h3 {
+    /*removed class selector and used element selector*/
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 .footer {
@@ -124,31 +135,8 @@
     text-align: center;
 }
 
-.footer h4 {
+h4 {
     /* changed h2 to h4 to reflect changes made in index.html*/
     font-size: 20px;
 }
 
-body {
-    background-color: #d9dcd6;
-}
-
-h1 {
-    display: inline-block;
-    font-size: 48px;
-}
-
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
-h3 {
-    /*removed class selector and used element selector*/
-    margin-bottom: 10px;
-    text-align: center;
-}
