--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
     padding: 0;
@@ -52,7 +51,7 @@ li {
 
 .mainimage {
     /*moved the background image url to index.html and added alt attribute to it. Changed the class name*/
-    height: 800px;
+    height: 1000px;
     width: 100%;
     margin-bottom: 25px;
     background-size: cover;
@@ -63,25 +62,29 @@ li {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+    
 }
 
-.content-main {
-    /* renamed and grouped the class selector */
-margin-bottom: 20px;
+.content img {
+      
+    max-height: 200px;
+}
+
+h2 {
+       margin-bottom: 20px;
+       font-size: 36px;
+       }
+
+#social-media-marketing,
+#online-reputation-management,
+#search-engine-optimization {
+   margin-bottom: 20px;
 padding: 50px;
 height: 300px;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 background-color: #0072bb;
 color: #ffffff;
-}
 
-.content-main img { 
-max-height: 200px;
-}
-
-.content-main h2 {
-margin-bottom: 20px;
-font-size: 36px;
 }
 
 .float-left {
